@@ -1,28 +1,0 @@
-"""Stream events, communicate strategy's signals
-    and transmit order to execution.py"""
-
-class Event(object):
-    pass
-
-class TickEvent(Event):
-    def __init__(self, instrument, time, bid, ask):
-        self.type = "TICK"
-        self.instrument = instrument
-        self.time = time
-        self.bid = bid
-        self.ask = ask
-
-class SignalEvent(Event):
-    def __init__(self, instrument, order_type, side):
-        self.type = "SIGNAL"
-        self.instrument = instrument
-        self.order_type = order_type
-        self.side = side
-
-class OrderEvent(Event):
-    def __init__(self, instrument, units, order_type, side):
-        self.type = "ORDER"
-        self.instrument = instrument
-        self.units = units
-        self.order_type = order_type
-        self.side = side
