@@ -1,31 +1,0 @@
-import httplib
-import urllib
-
-class Execution(object):
-    def __init__(self, domain, access_token, account_id):
-        self.domain = domain 
-        self.access_token = access_token
-        self.account_id = account_id
-        self.conn = self.obtain_connection()
-
-    def obtain_connection(self):
-        return httplib.HTTPSConnection(self.domain)
-
-    def execution_order(self, event):
-        headers = {
-            "Content-Type": "application/x-www-form-urlenconded",
-            "Authorization": "Bearer" + self.access_token
-        }
-        params = urllib.urlencode({
-            "instrument": event.instrument,
-            "units": event.units,
-            "type": event.order_type,
-            "side": event.side
-        })
-        self.conn.request(
-            "POST",
-            "/v3/accounts/%s/orders" %str(self.account_id),
-            params, headers
-        )
-        response = self.conn.getresponse().read()
-        print response
