@@ -1,38 +1,0 @@
-#modify hist.py, file 
-
-import os
-
-import bs4
-import requests
-
-import json 
-import pandas as pd
-
-import time
-
-import v20
-
-#download EUR_USD
-
-#instrument list:EUR,...
-def parse():
-	pass
-
-#first download data (OHLC)
-def download():
-	pass
-
-#draw candle chart
-df = pd.DataFrame()
-def get():
-	while not (s == 'd2'):
-		get_data
-
-def something():
-	d1 = "2016-01-01"
-    d1 = time.mktime(time.strptime(d1, '%Y-%m-%d'))
-    d2 = "2017-01-01"
-    d2 = time.mktime(time.strptime(d2, '%Y-%m-%d'))
-    return
-
-#there are two DateTime 
