@@ -1,19 +1,0 @@
-import os 
-
-ENVIRONMENTS = {
-    "streaming": {
-        "real": "stream-fxtrade.oanda.com",
-        "practice": "stream-fxpractice.oanda.com"
-        },
-    "api": {
-        "real": "api-fxtrade.oanda.com",
-        "practice": "api-fxpractice.oanda.com"
-        }
-    }
-
-DOMAIN = "practice"
-STREAM_DOMAIN = ENVIRONMENTS["streaming"][DOMAIN]
-API_ENVIRONMENT = ENVIRONMENTS["api"][DOMAIN]
-ACCESS_TOKEN = os.environ.get('OANDA_API_ACCESS_TOKEN',None)
-ACCOUNT_ID = os.environ.get('OANDA_API_ACCOUNT_ID', None)
-
